# asyncmigrate-rs

./: Cargo.toml  README.md
asyncmigrate-cli/: Cargo.toml  README.md
asyncmigrate-cli/src/: main.rs
asyncmigrate-cli/src/commands/: migrate.rs  mod.rs  override_undo_sql.rs  redo.rs  rollback.rs  setup.rs  status.rs
asyncmigrate-cli/src/utils/: mod.rs
asyncmigrate-cli/testfiles/: dbmigration.json
asyncmigrate-lib/: Cargo.toml
asyncmigrate-lib/schema/: 010__minor_change__down.sql  011__patch_change__up.sql
asyncmigrate-lib/schema/001__setup/: down.sql  up.sql
asyncmigrate-lib/schema/010__minor_change/: up.sql
asyncmigrate-lib/schema/200__major_change/: up.sql
asyncmigrate-lib/src/: changeset.rs  driver.rs  error.rs  lib.rs  tokio_postgres.rs
testenv/: docker-compose.yml
