[package]
name = "asyncmigrate-cli"
version = "0.1.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["io-util", "macros"] }
tokio-postgres = "0.5"
asyncmigrate = { path = "../asyncmigrate-lib" }
clap = "2"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
rpassword = "4"
rustyline = "6"